--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,33 @@ p {
 
 a {
     color: $base-font-color;
+
+    &:hover {
+        color: blue;
+    }
+}
+
+header {
+    text-align: center;
+
+    p {
+        color: green;
+    }
+}
+
+.main-section {
+    background-color: lightgrey;
+
+    .post {
+        background-color: lightgreen;
+
+        p {
+            font-weight: bold;
+
+            &.first-paragraph {
+                color: red;
+            }
+
+        }
+    }
 }
