--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,27 @@ p {
 
 a {
   color: gray;
+}
+a:hover {
+  color: blue;
+}
+
+header {
+  text-align: center;
+}
+header p {
+  color: green;
+}
+
+.main-section {
+  background-color: lightgrey;
+}
+.main-section .post {
+  background-color: lightgreen;
+}
+.main-section .post p {
+  font-weight: bold;
+}
+.main-section .post p.first-paragraph {
+  color: red;
 }/*# sourceMappingURL=style.css.map */
