--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 p {
-  color: gray;
+  color: violet;
   font-size: 18px;
 }
 
 a {
-  color: gray;
+  color: violet;
 }
 a:hover {
   color: blue;
