--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 p {
   color: violet;
   font-size: 18px;
@@ -17,8 +21,22 @@ header p {
   color: green;
 }
 
+.col-1-3 {
+  width: 33.33;
+  padding: 20px;
+}
+
+.main-header {
+  height: 60vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .main-section {
   background-color: lightgrey;
+  padding: 60px 0;
 }
 .main-section .post {
   background-color: lightgreen;
@@ -28,4 +46,10 @@ header p {
 }
 .main-section .post p.first-paragraph {
   color: red;
+}
+
+.site-footer {
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
 }/*# sourceMappingURL=style.css.map */
