--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 p {
     color: $base-font-color;
     font-size: $base-font-size;
@@ -17,4 +21,8 @@ header {
     p {
         color: green;
     }
+}
+
+.col-1-3 {
+    @include col-1-3(33.33, 20px);
 }
