--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+.btn-secondary, .btn-primary {
+  border-radius: 15px;
+  color: #fff;
+  padding: 14px 20px;
+  display: inline-block;
+}
+.btn-secondary:hover, .btn-primary:hover {
+  color: pink;
+}
+
+.btn-primary {
+  background-color: red;
+  border: 1px solid green;
+}
+
+.btn-secondary {
+  background-color: blue;
+  border: 1px solid orange;
+}
+
 * {
   box-sizing: border-box;
 }
